Partie Bonus : Modification du Dockerfile afin de construire un JRE minimal avec jlink pour encore minimiser la taille
Basé sur cette documentation : https://hub.docker.com/_/eclipse-temurin